--- a/31-10/T/style.css
+++ b/31-10/T/style.css
@@ -8,6 +8,16 @@
     box-sizing: border-box;
 }
 
+.container {
+    display: flex;
+    align-items: var(--center);
+    flex-direction: column;
+}
+
 canvas {
-    border: 4px solid;
+    position: relative;
+    top: 11.5rem;
+    right: 20rem;
+    border: 4px solid blue;
+    z-index: 1;
 }
